syntax = "proto3";

package proto.services.user_svc.v1;

option go_package = "gen/proto/services/user-svc";

//
// CreateUser
//

message CreateUserRequest {
	// TODO
}

message CreateUserResponse {
	// TODO
}

//
// GetUser
//

message GetUserRequest {
	// TODO
}

message GetUserResponse {
	// TODO
}

//
// UpdateUser
//

message UpdateUserRequest {
	// TODO
}

message UpdateUserResponse {
	// TODO
}

//
// ReadPublicProfile
//

message ReadPublicProfileRequest {
	// TODO
}

message ReadPublicProfileResponse {
	// TODO
}

//
// UserService
//

service UserService {
	rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
	rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
	rpc ReadPublicProfile (ReadPublicProfileRequest) returns (ReadPublicProfileResponse) {}
}
